# external_emergency_button_trigger

./: CMakeLists.txt  README.md  package.xml
scripts/: keyboard_emergency.py
